6500 - Customer setup dev

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/p_action_layout/p_action_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/p_action_layout/p_action_layout.component.html
@@ -1,21 +1,28 @@
 <div class="p_action_layout">
  <!-- PROFILE HTML - p_action_layout --> 
 <div id="R41" class="row">
-	<div id="R41C1" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" >
-		<div class="customer_detail" >
-			<f_npss_merchant_ui [comp_id]="'customer_detail'" [screen_instance]="screen_instance" [hidden]="isHidden('customer_detail','f_npss_merchant_ui')" profile_name="p_action_layout"></f_npss_merchant_ui >
+	<div id="R41C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="merchant_detail" >
+			<f_npss_merchant_ui [comp_id]="'merchant_detail'" [screen_instance]="screen_instance" [hidden]="isHidden('merchant_detail','f_npss_merchant_ui')" profile_name="p_action_layout"></f_npss_merchant_ui >
 		</div>
 	</div>
 </div>
 <div id="R21" class="row">
-	<div id="R21C1" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R21C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="account__detail" >
 			<f_npss_mer_account_ui [comp_id]="'account__detail'" [screen_instance]="screen_instance" [hidden]="isHidden('account__detail','f_npss_mer_account_ui')" profile_name="p_action_layout"></f_npss_mer_account_ui >
 		</div>
 	</div>
 </div>
+<div id="R51" class="row">
+	<div id="R51C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="shop_detail" >
+			<f_shop_detail [comp_id]="'shop_detail'" [screen_instance]="screen_instance" [hidden]="isHidden('shop_detail','f_shop_detail')" profile_name="p_action_layout"></f_shop_detail >
+		</div>
+	</div>
+</div>
 <div id="R31" class="row">
-	<div id="R31C1" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R31C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="action" >
 			<f_action [comp_id]="'action'" [screen_instance]="screen_instance" [hidden]="isHidden('action','f_action')" profile_name="p_action_layout"></f_action >
 		</div>
