--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_npss_merchant_ui/f_npss_merchant_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_npss_merchant_ui/f_npss_merchant_ui.component.html
@@ -3,31 +3,48 @@
 <fieldset [disabled]="isFormDisabled()" [hidden]="isFormHidden()">
 	<h2 class="need-header" [hidden]="hasHeader">{{component_header | translate}}</h2>	<form #f_npss_merchant_ui="ngForm">
 <div id="RN01" class="row">
-	<div #npss_merchant_ui_channel_id id="RN01CN1" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('channel_id')" >
+	<div #npss_merchant_ui_channel_id id="RN01CN1" class="column col-md-2 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('channel_id')" >
 				<txt [ctrl_id]="'npss_merchant_ui_channel_id'" [comp_id]="comp_id" [ctrl]="ctrl.channel_id" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
-	<div  id="RN01CN2" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('bankuserid')" >
+	<div  id="RN01CN2" class="column col-md-2 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('bankuserid')" >
 				<txt [ctrl_id]="'npss_merchant_ui_bankuserid'" [comp_id]="comp_id" [ctrl]="ctrl.bankuserid" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
-	<div  id="RN01CN4" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('merchant_name')" >
+	<div  id="RN01CN4" class="column col-md-2 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('merchant_name')" >
 				<txt [ctrl_id]="'npss_merchant_ui_merchant_name'" [comp_id]="comp_id" [ctrl]="ctrl.merchant_name" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
-	<div  id="RN01CN3" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('surname')" >
+	<div  id="RN01CN3" class="column col-md-2 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('surname')" >
 				<txt [ctrl_id]="'npss_merchant_ui_surname'" [comp_id]="comp_id" [ctrl]="ctrl.surname" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
+	<div  id="RN11CN9" class="column col-md-2 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('denomination')" >
+				<txt [ctrl_id]="'npss_merchant_ui_denomination'" [comp_id]="comp_id" [ctrl]="ctrl.denomination" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
+	<div  id="RN01CN10" class="column col-md-2 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('vat_number')" >
+				<txt [ctrl_id]="'npss_merchant_ui_vat_number'" [comp_id]="comp_id" [ctrl]="ctrl.vat_number" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
 </div>
 <div id="RN11" class="row">
-	<div  id="RN11CN6" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('mobile')" >
+	<div  id="RN11CN8" class="column col-md-2 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('mcc')" >
+				<txt [ctrl_id]="'npss_merchant_ui_mcc'" [comp_id]="comp_id" [ctrl]="ctrl.mcc" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
+	<div  id="RN11CN6" class="column col-md-2 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('mobile')" >
 				<txt [ctrl_id]="'npss_merchant_ui_mobile'" [comp_id]="comp_id" [ctrl]="ctrl.mobile" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
-	<div  id="RN11CN7" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('proxy_type')" >
+	<div  id="RN01CN11" class="column col-md-2 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('proxy_type')" >
 				<txt [ctrl_id]="'npss_merchant_ui_proxy_type'" [comp_id]="comp_id" [ctrl]="ctrl.proxy_type" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
-	<div  id="RN11CN8" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('proxy_value')" >
+	<div  id="RN11CN7" class="column col-md-2 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('proxy_value')" >
 				<txt [ctrl_id]="'npss_merchant_ui_proxy_value'" [comp_id]="comp_id" [ctrl]="ctrl.proxy_value" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
-	<div  id="RN11CN9" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('denomination')" >
-				<txt [ctrl_id]="'npss_merchant_ui_denomination'" [comp_id]="comp_id" [ctrl]="ctrl.denomination" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	<div  id="RN11CN12" class="column col-md-2 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('channel_name')" >
+				<txt [ctrl_id]="'npss_merchant_ui_channel_name'" [comp_id]="comp_id" [ctrl]="ctrl.channel_name" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
+	<div  id="RN11CN14" class="column col-md-2 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('merchant_tag')" >
+				<txt [ctrl_id]="'npss_merchant_ui_merchant_tag'" [comp_id]="comp_id" [ctrl]="ctrl.merchant_tag" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
+</div>
+<div id="RN21" class="row">
+	<div  id="RN21CN15" class="column col-md-12 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('logo')" >
+				<txt [ctrl_id]="'npss_merchant_ui_logo'" [comp_id]="comp_id" [ctrl]="ctrl.logo" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
 </div>
 	</form>
