--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/p_main_layout/p_main_layout.component.html
@@ -16,8 +16,8 @@
 	<div id="R41C2" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 <div id="R41C2R0" class="row">
 	<div id="R41C2R0C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="customers"  [hidden]="!screen_instance['customers'].show" >
-			<datatable [comp_id]="'customers'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
+		<div class="merchant"  [hidden]="!screen_instance['merchant'].show" >
+			<datatable [comp_id]="'merchant'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
 		</div>
 	</div>
 	<div id="R41C2R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
