6505 - Merchant screen dev

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/p_action_layout/p_action_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/p_action_layout/p_action_layout.component.html
@@ -17,7 +17,7 @@
 <div id="R51" class="row">
 	<div id="R51C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="shop_detail" >
-			<f_shop_detail [comp_id]="'shop_detail'" [screen_instance]="screen_instance" [hidden]="isHidden('shop_detail','f_shop_detail')" profile_name="p_action_layout"></f_shop_detail >
+			<f_npss_shop_ui [comp_id]="'shop_detail'" [screen_instance]="screen_instance" [hidden]="isHidden('shop_detail','f_npss_shop_ui')" profile_name="p_action_layout"></f_npss_shop_ui >
 		</div>
 	</div>
 </div>
