6511 - Customer setup dev

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_customer_setup/f_action/f_action.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_customer_setup/f_action/f_action.component.html
@@ -8,6 +8,7 @@
 		<btn [ctrl_id]="'action_unenrol'" [comp_id]="comp_id" [ctrl]="screen_instance.action_unenrol" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_unenrol.show"></btn>
 		<btn [ctrl_id]="'action_add_account'" [comp_id]="comp_id" [ctrl]="screen_instance.action_add_account" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_add_account.show"></btn>
 		<btn [ctrl_id]="'action_block_unblock'" [comp_id]="comp_id" [ctrl]="screen_instance.action_block_unblock" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_block_unblock.show"></btn>
+		<btn [ctrl_id]="'action_remove_account'" [comp_id]="comp_id" [ctrl]="screen_instance.action_remove_account" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_remove_account.show"></btn>
  	</div>
 
 </div>
