--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_customer_setup/f_npss_customer_account_ui/f_npss_customer_account_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_customer_setup/f_npss_customer_account_ui/f_npss_customer_account_ui.component.html
@@ -20,6 +20,9 @@
 	<div  id="RN11CN5" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory10')" >
 				<multi_select_cbo [ctrl_id]="'npss_customer_account_ui_memory10'" [comp_id]="comp_id" [ctrl]="ctrl.memory10" [model]="screen_instance[this.comp_id].f_npss_customer_account_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></multi_select_cbo>
 	</div>
+	<div  id="RN11CN6" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory11')" >
+				<txt [ctrl_id]="'npss_customer_account_ui_memory11'" [comp_id]="comp_id" [ctrl]="ctrl.memory11" [model]="screen_instance[this.comp_id].f_npss_customer_account_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
 </div>
 	</form>
 </fieldset >
