--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_customer_setup/f_npss_customer_proxy_ui/f_npss_customer_proxy_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_customer_setup/f_npss_customer_proxy_ui/f_npss_customer_proxy_ui.component.html
@@ -21,7 +21,7 @@
 				<txt [ctrl_id]="'npss_customer_proxy_ui_mobile'" [comp_id]="comp_id" [ctrl]="ctrl.mobile" [model]="screen_instance[this.comp_id].f_npss_customer_proxy_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
 	<div  id="RN21CN9" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('proxy_type')" >
-				<txt [ctrl_id]="'npss_customer_proxy_ui_proxy_type'" [comp_id]="comp_id" [ctrl]="ctrl.proxy_type" [model]="screen_instance[this.comp_id].f_npss_customer_proxy_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+				<cbo [ctrl_id]="'npss_customer_proxy_ui_proxy_type'" [comp_id]="comp_id" [ctrl]="ctrl.proxy_type" [model]="screen_instance[this.comp_id].f_npss_customer_proxy_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
 	</div>
 	<div  id="RN31CN10" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('proxy_value')" >
 				<txt [ctrl_id]="'npss_customer_proxy_ui_proxy_value'" [comp_id]="comp_id" [ctrl]="ctrl.proxy_value" [model]="screen_instance[this.comp_id].f_npss_customer_proxy_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
