--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_navigation_ui/f_navigation_ui.component.html
@@ -2,6 +2,7 @@
 	
 	<div class="row dynamic_action_btn">
 		<btn [ctrl_id]="'navigation_ui_search'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_search" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_search.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_view_process_log'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_process_log" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_process_log.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_entrolment'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_entrolment" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_entrolment.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_unentrolment'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_unentrolment" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_unentrolment.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_update_personal'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_update_personal" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_update_personal.show"></btn>
