--- a/frontend/wp_ng9/custom_widget/npss_cs_change_customer_mobile/npss_cs_change_customer_mobile.component.html
+++ b/frontend/wp_ng9/custom_widget/npss_cs_change_customer_mobile/npss_cs_change_customer_mobile.component.html
@@ -5,8 +5,8 @@ styleClass="comments__popup">
 <section>
     <div style="width:700px;">
         <div class="col-md-12">
-            <div *ngFor='let successcase of popuparray' style="margin-left:50px">
-                {{successcase.case}}
+            <div *ngFor='let successcase of messagearray' style="margin-left:50px">
+                {{successcase.msg}}
             </div>
         </div>
     </div>
