--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_reversal/f_npss_op_reversal_srch/f_npss_op_reversal_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_reversal/f_npss_op_reversal_srch/f_npss_op_reversal_srch.component.html
@@ -4,10 +4,10 @@
 	<h2 class="need-header" [hidden]="hasHeader">{{component_header | translate}}</h2>	<form #f_npss_op_reversal_srch="ngForm">
 <div id="RN21" class="row">
 	<div #npss_op_reversal_srch_value_date id="RN01CN1" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('value_date')" >
-				<dtp [ctrl_id]="'npss_op_reversal_srch_value_date'" [comp_id]="comp_id" [ctrl]="ctrl.value_date" [model]="screen_instance[this.comp_id].f_npss_op_reversal_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></dtp>
+				<cdn_date [ctrl_id]="'npss_op_reversal_srch_value_date'" [comp_id]="comp_id" [ctrl]="ctrl.value_date" [model]="screen_instance[this.comp_id].f_npss_op_reversal_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_date>
 	</div>
 	<div  id="RN21CN8" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory63')" >
-				<dtp [ctrl_id]="'npss_op_reversal_srch_memory63'" [comp_id]="comp_id" [ctrl]="ctrl.memory63" [model]="screen_instance[this.comp_id].f_npss_op_reversal_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></dtp>
+				<cdn_date [ctrl_id]="'npss_op_reversal_srch_memory63'" [comp_id]="comp_id" [ctrl]="ctrl.memory63" [model]="screen_instance[this.comp_id].f_npss_op_reversal_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_date>
 	</div>
 </div>
 <div id="RN01" class="row">
