--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_action/f_action.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_action/f_action.component.html
@@ -2,7 +2,7 @@
 	
 	<div class="row dynamic_action_btn">
 		<btn [ctrl_id]="'action_back'" [comp_id]="comp_id" [ctrl]="screen_instance.action_back" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_back.show"></btn>
-		<btn [ctrl_id]="'action_enrol'" [comp_id]="comp_id" [ctrl]="screen_instance.action_enrol" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_enrol.show"></btn>
+		<btn [ctrl_id]="'action_enroll'" [comp_id]="comp_id" [ctrl]="screen_instance.action_enroll" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_enroll.show"></btn>
 		<btn [ctrl_id]="'action_disable'" [comp_id]="comp_id" [ctrl]="screen_instance.action_disable" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_disable.show"></btn>
 		<btn [ctrl_id]="'action_update_personal_data'" [comp_id]="comp_id" [ctrl]="screen_instance.action_update_personal_data" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_update_personal_data.show"></btn>
 		<btn [ctrl_id]="'action_update_mcc'" [comp_id]="comp_id" [ctrl]="screen_instance.action_update_mcc" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_update_mcc.show"></btn>
