--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/s_merchant_setup.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/s_merchant_setup.component.html
@@ -1,4 +1,5 @@
 <div class="s_merchant_setup">
+<p_shop_and_cashdesk_layout [screen_instance]="this" [hidden]="!(current_profile=='p_shop_and_cashdesk_layout')"></p_shop_and_cashdesk_layout>
 <p_view_req_and_res_profile [screen_instance]="this" [hidden]="!(current_profile=='p_view_req_and_res_profile')"></p_view_req_and_res_profile>
 <p_view_history_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_history_layout')"></p_view_history_layout>
 <p_action_layout [screen_instance]="this" [hidden]="!(current_profile=='p_action_layout')"></p_action_layout>
