6543 - CHANGES IN MERCHANT SETUP

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_action/f_action.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_action/f_action.component.html
@@ -19,6 +19,7 @@
 		<btn [ctrl_id]="'action_enroll_cash_desk'" [comp_id]="comp_id" [ctrl]="screen_instance.action_enroll_cash_desk" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_enroll_cash_desk.show"></btn>
 		<btn [ctrl_id]="'action_update_cash_desk_details'" [comp_id]="comp_id" [ctrl]="screen_instance.action_update_cash_desk_details" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_update_cash_desk_details.show"></btn>
 		<btn [ctrl_id]="'action_disable_cash_desk_details'" [comp_id]="comp_id" [ctrl]="screen_instance.action_disable_cash_desk_details" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_disable_cash_desk_details.show"></btn>
+		<btn [ctrl_id]="'action_view_shop'" [comp_id]="comp_id" [ctrl]="screen_instance.action_view_shop" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.action_view_shop.show"></btn>
  	</div>
 
 </div>
