--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_navigation_ui/f_navigation_ui.component.html
@@ -16,7 +16,7 @@
 		<btn [ctrl_id]="'navigation_ui_trg_btn2'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_trg_btn2" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_trg_btn2.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_tri_btn3'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_tri_btn3" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_tri_btn3.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_tri_btn4'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_tri_btn4" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_tri_btn4.show"></btn>
-		<btn [ctrl_id]="'navigation_ui_view_shop_and_cashdesk_details'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_shop_and_cashdesk_details" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_shop_and_cashdesk_details.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_view_shop'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_shop" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_shop.show"></btn>
  	</div>
 
 </div>
