--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_npss_merchant_ui/f_npss_merchant_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_npss_merchant_ui/f_npss_merchant_ui.component.html
@@ -44,7 +44,7 @@
 </div>
 	</div>
 	<div  id="RN21CN15" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('logo')" >
-				<img_cctrl [ctrl_id]="'npss_merchant_ui_logo'" [comp_id]="comp_id" [ctrl]="ctrl.logo" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></img_cctrl>
+				<img_brw [ctrl_id]="'npss_merchant_ui_logo'" [comp_id]="comp_id" [ctrl]="ctrl.logo" [model]="screen_instance[this.comp_id].f_npss_merchant_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></img_brw>
 	</div>
 </div>
 	</form>
