6554 - Corrections in merchant setup screen

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/p_shop_and_cashdesk_layout/p_shop_and_cashdesk_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/p_shop_and_cashdesk_layout/p_shop_and_cashdesk_layout.component.html
@@ -18,13 +18,13 @@
 	<div id="R11C2" class="column col-md-5 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 <div id="R11C2R0" class="row">
 	<div id="R11C2R0C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="cash_desk_action" >
-			<f_cash_desk_action [comp_id]="'cash_desk_action'" [screen_instance]="screen_instance" [hidden]="isHidden('cash_desk_action','f_cash_desk_action')" profile_name="p_shop_and_cashdesk_layout"></f_cash_desk_action >
+		<div class="cashdesk_action" >
+			<f_cashdesk_action [comp_id]="'cashdesk_action'" [screen_instance]="screen_instance" [hidden]="isHidden('cashdesk_action','f_cashdesk_action')" profile_name="p_shop_and_cashdesk_layout"></f_cashdesk_action >
 		</div>
 	</div>
 	<div id="R11C2R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="cash_desk"  [hidden]="!screen_instance['cash_desk'].show" >
-			<datatable [comp_id]="'cash_desk'" [screen_instance]="screen_instance" profile_name="p_shop_and_cashdesk_layout"></datatable>
+		<div class="cashdesk"  [hidden]="!screen_instance['cashdesk'].show" >
+			<datatable [comp_id]="'cashdesk'" [screen_instance]="screen_instance" profile_name="p_shop_and_cashdesk_layout"></datatable>
 		</div>
 	</div>
 </div>
