--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/p_action_layout/p_action_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/p_action_layout/p_action_layout.component.html
@@ -23,8 +23,8 @@
 </div>
 <div id="R61" class="row">
 	<div id="R61C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="cash_desk_detail" >
-			<f_npss_cash_desk_ui [comp_id]="'cash_desk_detail'" [screen_instance]="screen_instance" [hidden]="isHidden('cash_desk_detail','f_npss_cash_desk_ui')" profile_name="p_action_layout"></f_npss_cash_desk_ui >
+		<div class="cashdesk_detail" >
+			<f_npss_cash_desk_ui [comp_id]="'cashdesk_detail'" [screen_instance]="screen_instance" [hidden]="isHidden('cashdesk_detail','f_npss_cash_desk_ui')" profile_name="p_action_layout"></f_npss_cash_desk_ui >
 		</div>
 	</div>
 </div>
