6607 - accept and return ide changes

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_cashdesk_action/f_cashdesk_action.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_cashdesk_action/f_cashdesk_action.component.html
@@ -5,6 +5,7 @@
 		<btn [ctrl_id]="'cashdesk_action_enrolment_desk'" [comp_id]="comp_id" [ctrl]="screen_instance.cashdesk_action_enrolment_desk" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.cashdesk_action_enrolment_desk.show"></btn>
 		<btn [ctrl_id]="'cashdesk_action_update_desk'" [comp_id]="comp_id" [ctrl]="screen_instance.cashdesk_action_update_desk" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.cashdesk_action_update_desk.show"></btn>
 		<btn [ctrl_id]="'cashdesk_action_disable_desk'" [comp_id]="comp_id" [ctrl]="screen_instance.cashdesk_action_disable_desk" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.cashdesk_action_disable_desk.show"></btn>
+		<btn [ctrl_id]="'cashdesk_action_trg_for_clear_ui'" [comp_id]="comp_id" [ctrl]="screen_instance.cashdesk_action_trg_for_clear_ui" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.cashdesk_action_trg_for_clear_ui.show"></btn>
  	</div>
 
 </div>
