6647 - Query changes for MI

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_shop_action/f_shop_action.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_setup/f_shop_action/f_shop_action.component.html
@@ -6,6 +6,7 @@
 		<btn [ctrl_id]="'shop_action_disable_shop'" [comp_id]="comp_id" [ctrl]="screen_instance.shop_action_disable_shop" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.shop_action_disable_shop.show"></btn>
 		<btn [ctrl_id]="'shop_action_set_shop_default'" [comp_id]="comp_id" [ctrl]="screen_instance.shop_action_set_shop_default" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.shop_action_set_shop_default.show"></btn>
 		<btn [ctrl_id]="'shop_action_remove_shop_account'" [comp_id]="comp_id" [ctrl]="screen_instance.shop_action_remove_shop_account" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.shop_action_remove_shop_account.show"></btn>
+		<btn [ctrl_id]="'shop_action_trg_hide_for_bind_tran'" [comp_id]="comp_id" [ctrl]="screen_instance.shop_action_trg_hide_for_bind_tran" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.shop_action_trg_hide_for_bind_tran.show"></btn>
  	</div>
 
 </div>
