6655 - ide changes djsks

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_p2p_payments/p_payment_layout/p_payment_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_p2p_payments/p_payment_layout/p_payment_layout.component.html
@@ -7,5 +7,12 @@
 		</div>
 	</div>
 </div>
+<div id="R21" class="row">
+	<div id="R21C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="retrieve_contact_cw"  [hidden]="!screen_instance['retrieve_contact_cw'].show" >
+			<npss_cs_retrieve_contact [comp_id]="'retrieve_contact_cw'" [screen_instance]="screen_instance" profile_name="p_payment_layout"></npss_cs_retrieve_contact>
+		</div>
+	</div>
+</div>
 
 </div>
