--- a/frontend/wp_ng9/custom_widget/npss_cs_retrieve_contact/npss_cs_retrieve_contact.component.html
+++ b/frontend/wp_ng9/custom_widget/npss_cs_retrieve_contact/npss_cs_retrieve_contact.component.html
@@ -1,1 +1,16 @@
 <!--HTML FILE-->
+<!--HTML FILE-->
+<!--HTML FILE-->
+
+<p-dialog header="Response" [(visible)]="showPopup" [modal]="true" [responsive]="true" (onHide)="cancel()"
+styleClass="comments__popup">
+<section>
+    <div style="width:700px;">
+        <div class="col-md-12">
+            <div *ngFor='let successcase of messagearray' style="margin-left:50px">
+                {{successcase.msg}}
+            </div>
+        </div>
+    </div>
+</section>
+</p-dialog>
