--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_op_view_transaction/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_op_view_transaction/p_main_layout/p_main_layout.component.html
@@ -43,8 +43,8 @@
 </div>
 	</div>
 	<div id="R21C1R0C2" class="column col-md-4 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="chart"  [hidden]="!screen_instance['chart'].show" >
-			<chart [comp_id]="'chart'" [screen_instance]="screen_instance" profile_name="p_main_layout"></chart>
+		<div class="status_group"  [hidden]="!screen_instance['status_group'].show" >
+			<chart [comp_id]="'status_group'" [screen_instance]="screen_instance" profile_name="p_main_layout"></chart>
 		</div>
 	</div>
 </div>
